Верстка. Главная страница
Добавил анимацию кнопки входа.

--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -13,11 +13,27 @@
 <body>
     <div class = "main-container">
         <!-- Кнопка входа-->
-        <a class="main-enter-logo-link" href=""><div class="main-enter-logo">
+        <!--<a class="main-enter-logo-link" href=""><div class="main-enter-logo">
 
             <img src ="../../images/Вход.svg" />
 
-        </div></a>
+        </div></a>-->
+
+        <a class = main-enter-logo-link>
+            <svg class="main-enter-logo-rectangle" width="54.000000" height="58.000000" viewBox="0 0 54 58" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                    Created with Pixso.
+                </desc>
+                <defs/>
+                    <path  d="M16 0L54 0L54 3L16 3L16 0Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    <path  d="M16 55L54 55L54 58L16 58L16 55Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    <path  d="M54 0L54 58L50 58L50 0L54 0Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    <path  d="M22.5 38.54L34.52 26.51L37.34 29.34L25.32 41.36L22.5 38.54Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    <path  d="M0 27L35 27L35 31L0 31L0 27Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    <path  d="M25 17L37.02 29.02L34.19 31.84L22.17 19.82L25 17Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
+
+            </svg>
+        </a>
         <!-- Просто два текста -->
         <div class = "main-logo">
 
