изменения главное страинцы. текст+правильное выделение

--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -31,17 +31,15 @@
                     <path  d="M22.5 38.54L34.52 26.51L37.34 29.34L25.32 41.36L22.5 38.54Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
                     <path  d="M0 27L35 27L35 31L0 31L0 27Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
                     <path  d="M25 17L37.02 29.02L34.19 31.84L22.17 19.82L25 17Z" fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd"/>
-
             </svg>
         </a>
+
         <!-- Просто два текста -->
         <div class = "main-logo">
-
-            <p class = "man-logo-pricheson">Pricheson</p>
-
+            <p class = "main-logo-pricheson">Pricheson</p>
             <p class = "main-logo-add-words">Включай свой стиль</p>
-
         </div>
+
         <!-- Тоже текст но с помощью тега span я могу задать какому-то конкретного слову(предложению, абзацу и т.д.) конкретный стиль -->
         <div class = "main-question">
             <p class = "main-question-text">что ты <span style="color: rgb(35, 182, 132)">апгрейдишь</span> сегодня?</p>
@@ -60,9 +58,15 @@
             <a class = "test-test " href="">
                 <img class = "main-image" src="../../images/спа1.svg"/>
             </a>
+        </div>
 
+        <div class = "main-little-words">
+            <p class = "first-phrase">обнови волосы</p>
+            <p class = "second-phrase">обнови ногти</p>
+            <p class = "third-phrase">обнови тело</p>
         </div>
 
     </div>
+
 </body>
 </html>
