Фронт. Страница всех услуг
Готова.

--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <!--Подключение стиля самой страницы, стилей сбрасывающих стили браузера, общих стилей для всех, шрифты-->
     <link rel ="stylesheet" href ="style.css">
     <link rel ="stylesheet" href ="../../styles/reset.css">
@@ -47,15 +47,15 @@
 
         <div class = "main-pictures">
             <!-- Кликабельные картинки с подсветкой -->
-            <a class = "test-test " href="">
+            <a class = "test-test " href="../all_services/index.html">
                 <img class = "main-image" src="../../images/волосы1.svg"/>
             </a>
 
-            <a class = "test-test " href="">
+            <a class = "test-test " href="../all_services/index.html">
                 <img class = "main-image" src="../../images/маник1.svg"/>
             </a>
 
-            <a class = "test-test " href="">
+            <a class = "test-test " href="../all_services/index.html">
                 <img class = "main-image" src="../../images/спа1.svg"/>
             </a>
         </div>
