--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -7,7 +7,7 @@
     <link rel ="stylesheet" href ="style.css">
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
-    <link rel="stylesheet" href="../../styles/font.css">
+    <link rel ="stylesheet" href="../../styles/font.css">
     <title>Main page</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
             </svg>
         </a>
 
-        <!-- Просто два текста -->
+        <!-- ЛОГО -->
         <div class = "main-logo">
             <p class = "main-logo-pricheson">Pricheson</p>
             <p class = "main-logo-add-words">Включай свой стиль</p>
