--- a/front_pages/pages/all_services/index.html
+++ b/front_pages/pages/all_services/index.html
@@ -94,11 +94,8 @@
 
             </table>
 
-            <a class="all-services-create-button-link" href=""><div class="all-services-create-button">
-
-                Оформить заказ
-
-            </div></a>
+            <!-- Не уверен насчёт онклик-->
+            <button class="all-services-create-button" type="submit" onclick="location.href=''">Оформить заказ</button>
 
         </div>
 
