--- a/front_pages/pages/registration/index.html
+++ b/front_pages/pages/registration/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class = "main-container">
+        <a class = "exit-button" href="../main_page/index.html"><img src="../../images/Кнопка%20выхода.svg" /></a>
         <!-- ЛОГО -->
         <div class = "registration-logo">
             <p class = "registration-logo-pricheson">Pricheson</p>
@@ -28,9 +29,8 @@
                 <div class = "registration-input"> <input placeholder = "логин"> </div>
                 <div class = "registration-input"> <input placeholder = "пароль"> </div>
             </div>
-            <div class = "registration-registr">
-                <p class = "registration-registr-words">зарегистрироваться</p>
-            </div>
+
+            <button type="submit" class="registration-button" onclick="location.href ='../main_page/index.html'">зарегистрироваться</button>
         </div>
 
     </div>
