Страница с выбором даты
Готова полностью

--- a/front_pages/pages/all_services/index.html
+++ b/front_pages/pages/all_services/index.html
@@ -94,8 +94,8 @@
 
             </table>
 
-            <!-- Не уверен насчёт онклик-->
-            <button class="all-services-create-button" type="submit" onclick="location.href=''">Оформить заказ</button>
+
+            <button class="all-services-create-button" type="submit" onclick="location.href='../date_select/index.html'">Оформить заказ</button>
 
         </div>
 
