Добавил стиль в общие и доделана страница выбора специалиста
Вынес кнопки при оформлении заказа в общие стили.

--- a/front_pages/pages/date_select/index.html
+++ b/front_pages/pages/date_select/index.html
@@ -119,7 +119,8 @@
 
             </div>
 
-            <button class="continue-button" type="submit" onclick="location.href=''">Далее</button>
+            <button class="continue-button order-create-button" type="submit" onclick="location.href=''">далее</button>
+            <button class="backwards-button order-create-button" type="submit" onclick="location.href=''">назад</button>
 
         </div>
 
