--- a/front_pages/pages/employee_select/index.html
+++ b/front_pages/pages/employee_select/index.html
@@ -40,6 +40,18 @@
                     <p class="selected-employee-specialization">косметолог</p>
                 </button>
             </div>
+
+
+
+<!--            <div class="employee-select-error">-->
+<!--                <p>Упс! кажется, свободных мастеров нет!-->
+<!--                    попробуй другую дату </p>-->
+<!--            </div>-->
+
+
+            <button class="continue-button order-create-button" type="submit" onclick="location.href=''">оформить</button>
+            <button class="backwards-button order-create-button" type="submit" onclick="location.href=''">назад</button>
+
         </div>
 
     </div>
