Страница входа + мелкие изменения

--- a/front_pages/pages/employee_select/index.html
+++ b/front_pages/pages/employee_select/index.html
@@ -50,7 +50,7 @@
 
 
             <button class="continue-button order-create-button" type="submit" onclick="location.href=''">оформить</button>
-            <button class="backwards-button order-create-button" type="submit" onclick="location.href=''">назад</button>
+            <button class="backwards-button order-create-button" type="submit" onclick="location.href='../date_select/index.html'">назад</button>
 
         </div>
 
