--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -19,7 +19,7 @@
 
         </div></a>-->
 
-        <a href="../registration/index.html" class = main-enter-logo-link>
+        <a href="../enter_page/index.html" class = main-enter-logo-link>
             <svg class="main-enter-logo-rectangle" width="54.000000" height="58.000000" viewBox="0 0 54 58" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <desc>
                     Created with Pixso.
