--- a/front_pages/pages/date_select/index.html
+++ b/front_pages/pages/date_select/index.html
@@ -119,8 +119,8 @@
 
             </div>
 
-            <button class="continue-button order-create-button" type="submit" onclick="location.href=''">далее</button>
-            <button class="backwards-button order-create-button" type="submit" onclick="location.href=''">назад</button>
+            <button class="continue-button order-create-button" type="submit" onclick="location.href='../employee_select/index.html'">далее</button>
+            <button class="backwards-button order-create-button" type="submit" onclick="location.href='../all_services/index.html'">назад</button>
 
         </div>
 
