Всплывающее окно отмены записи клиентом

--- a/front_pages/pages/client_orders/index.html
+++ b/front_pages/pages/client_orders/index.html
@@ -24,6 +24,17 @@
 
         </table>
 
+<!--        <div class="client-orders-decline">-->
+
+<!--            <p class="client-orders-decline-question">точно отменяем?</p>-->
+
+<!--            <div class="client-orders-decline-container">-->
+<!--                <button class="client-orders-decline-button" type="button">нет</button>-->
+<!--                <button class="client-orders-decline-button" type="button">да</button>-->
+<!--            </div>-->
+
+<!--        </div>-->
+
     </div>
 </body>
 </html>
