Вынос в общий стиль+страница админа
Вынес крестик и цвет фона в общие стили.
Сделал страницу всех сотрудников для админа.+ комментарии

--- a/front_pages/pages/client_orders/index.html
+++ b/front_pages/pages/client_orders/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="main-container">
 
+        <a class = "exit-button" href="../main_page/index.html"><img src="../../images/Кнопка%20выхода.svg" /></a>
 
         <p class="client-orders-header">это <span style="color: rgb(35, 182, 132)">твоя</span> история</p>
 
