Страница админ-клиенты
Готовая страница админ-клиенты
Мелкие изменения в других файлах, в основном пробелы и тп.
В таблицах админа изменена позиция левого столбца

--- a/front_pages/pages/admin_employees/index.html
+++ b/front_pages/pages/admin_employees/index.html
@@ -17,8 +17,8 @@
 
         <div class="admin_employee-buttons">
 
-            <button type="button" class="all-employee-button">это <span style="color: rgb(35, 182, 132)">твои</span> сотрудники</button>
-            <button type="button" class="all-clients-button">это <span style="color: rgb(35, 182, 132, 0.6)">твои</span> клиенты</button>
+            <button type = "button" class = "all-employee-button" onclick = "location.href = '../admin_employees/index.html'">это <span style="color: rgb(35, 182, 132)">твои</span> сотрудники</button>
+            <button type = "button" class = "all-clients-button" onclick = "location.href = '../admin_clients/index.html'">это <span style="color: rgb(35, 182, 132, 0.5)">твои</span> клиенты</button>
 
         </div>
         <!--Почему таблица?
