--- a/front_pages/pages/employee_select/index.html
+++ b/front_pages/pages/employee_select/index.html
@@ -49,7 +49,7 @@
 <!--            </div>-->
 
 
-            <button class="continue-button order-create-button" type="submit" onclick="location.href=''">оформить</button>
+            <button class="continue-button order-create-button" type="submit" onclick="location.href='../client_orders'">оформить</button>
             <button class="backwards-button order-create-button" type="submit" onclick="location.href='../date_select/index.html'">назад</button>
 
         </div>
