Вынес цвета в отдельный файл
Цвета теперь подключается как переменные

--- a/front_pages/pages/client_orders/index.html
+++ b/front_pages/pages/client_orders/index.html
@@ -8,6 +8,7 @@
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
     <link rel="stylesheet" href="../../styles/font.css">
+    <link rel="stylesheet" href="../../styles/colors.css">
     <title>Client orders</title>
 </head>
 <body>
