--- a/front_pages/pages/employee_page/index.html
+++ b/front_pages/pages/employee_page/index.html
@@ -8,6 +8,7 @@
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
     <link rel="stylesheet" href="../../styles/font.css">
+    <link rel="stylesheet" href="../../styles/colors.css">
     <title>Employee page</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
     <a class = "exit-button" href="../main_page/index.html"><img src="../../images/Кнопка%20выхода.svg" alt="no img"/></a>
 
     <div class="employee-words">
-        <p class = "employee-words-header"> это <span style = "color: rgb(35, 182, 132)">твои</span> клиенты</p>
+        <p class = "employee-words-header"> это <span style = "color: var(--main-enter-color)">твои</span> клиенты</p>
     </div>
 
     <!--Почему таблица?
