--- a/front_pages/pages/enter_page/index.html
+++ b/front_pages/pages/enter_page/index.html
@@ -8,6 +8,7 @@
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
     <link rel ="stylesheet" href="../../styles/font.css">
+    <link rel="stylesheet" href="../../styles/colors.css">
     <title>Enter page</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
         </div>
 
         <div class = "enter-words">
-            <p class = "enter-words-enter">нет аккаунта? не беда! <span style="color: rgb(239, 239, 239)"> <button type = "submit" class = "regist-button" onclick = "location.href ='../registration/index.html'"> регистрируйся </button> </span> и присоединяйся к нам</p>
+            <p class = "enter-words-enter">нет аккаунта? не беда! <span style="color: var(--enter-registr-button-color)"> <button type = "submit" class = "regist-button" onclick = "location.href ='../registration/index.html'"> регистрируйся </button> </span> и присоединяйся к нам</p>
         </div>
 
     </div>
