--- a/front_pages/pages/main_page/index.html
+++ b/front_pages/pages/main_page/index.html
@@ -8,6 +8,7 @@
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
     <link rel ="stylesheet" href="../../styles/font.css">
+    <link rel="stylesheet" href="../../styles/colors.css">
     <title>Main page</title>
 </head>
 <body>
@@ -42,7 +43,7 @@
 
         <!-- Тоже текст но с помощью тега span я могу задать какому-то конкретного слову(предложению, абзацу и т.д.) конкретный стиль -->
         <div class = "main-question">
-            <p class = "main-question-text">что ты <span style="color: rgb(35, 182, 132)">апгрейдишь</span> сегодня?</p>
+            <p class = "main-question-text">что ты <span style="color: var(--main-enter-color)">апгрейдишь</span> сегодня?</p>
         </div>
 
         <div class = "main-pictures">
