--- a/front_pages/pages/admin_employees/index.html
+++ b/front_pages/pages/admin_employees/index.html
@@ -8,6 +8,7 @@
     <link rel ="stylesheet" href ="../../styles/reset.css">
     <link rel ="stylesheet" href ="../../styles/common.css">
     <link rel="stylesheet" href="../../styles/font.css">
+    <link rel="stylesheet" href="../../styles/colors.css">
     <title>Admin employees</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
 
         <div class="admin_employee-buttons">
 
-            <button type = "button" class = "all-employee-button" onclick = "location.href = '../admin_employees/index.html'">это <span style="color: rgb(35, 182, 132)">твои</span> сотрудники</button>
-            <button type = "button" class = "all-clients-button" onclick = "location.href = '../admin_clients/index.html'">это <span style="color: rgb(35, 182, 132, 0.5)">твои</span> клиенты</button>
+            <button type = "button" class = "all-employee-button" onclick = "location.href = '../admin_employees/index.html'">это <span style="color: var(--main-enter-color)">твои</span> сотрудники</button>
+            <button type = "button" class = "all-clients-button" onclick = "location.href = '../admin_clients/index.html'">это <span style="color: var(--main-enter-inactive-color)">твои</span> клиенты</button>
 
         </div>
         <!--Почему таблица?
